--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,15 @@
+#navbar > .container{
+   padding: 0;
+}
 .nav-header a {
    color: var(--title);
    text-transform: uppercase;
    font-weight: 700;
+   font-size: 1.6rem;
    text-decoration: none;
-   padding: 1rem 0;
-   margin-right: 1rem;   
+   padding: 1.6rem 0;
+   margin-right: 1.6rem;   
    transition: 1s;
- }
- 
-.nav-header a:hover,
-.nav-header a[title]:hover {
-    color:var(--pink);
-    transform: scale(1.2);
  }
  
 .nav-header {
@@ -20,15 +18,18 @@
  
 .nav-header a[title] {
    font-weight: 900;
-   font-size: 2rem;
-   color: var(--title);     
+   font-size: 3.2rem;
+   color: var(--title);
+   margin-left: 1.6rem;     
  }
  
 .nav-header > ul > li {
-   justify-content: space-between;
-   margin-left: 1rem;
-   padding-left: 12.5rem;
- }
- 
+   justify-content: space-between;     
+}
 
- 
+
+.nav-header a:hover,
+.nav-header a[title]:hover {   
+    color:var(--pink);
+    transform: scale(1.2);
+ }
