:lady_beetle: bugfix at mozilla browser

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 1024px) and (max-width:1899px){
+@media (min-width: 1024px) {
    html {
       font-size:62.5% !important;
    }
