--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,6 +60,15 @@
       background: #f2f2f2;
    }
 
+   .grid-services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr))!important;   
+      grid-gap: 3.2rem; 
+      justify-items: center;   
+      justify-content: center;
+      padding-top: 4.8rem;   
+   }
+
    .container-footer p {
       padding:0 !important;
       font-size: 1rem;
