:sparkles: new content in portfolio section

--- a/css/finalSection.css
+++ b/css/finalSection.css
@@ -7,17 +7,15 @@
 
  .box-img {
    display: flex;   
-   justify-content: flex-end;
+   justify-content: center;
    align-items: center;
-   padding-top: 8rem;
-   margin-right: 3rem;
+   padding-top: 5rem;
+   padding-left: 8rem;
  }
 
 .img-contact {
-   width: 22rem;
-   height: 22rem;
-   border-radius: 100%;
-   border: 8px solid var(--white);   
+   max-width: 350px;
+   max-height: 350px;        
 }
 
 .content-contact {
