--- a/css/portfolioSection.css
+++ b/css/portfolioSection.css
@@ -1,30 +1,89 @@
-.grid-gallery {
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));   
-   grid-gap: 3.2rem; 
-   justify-items: center;   
-   justify-content: center;
-   padding-top: 3rem;
-}
 
-.grid-gallery img {
+.container-gallery {
    position: relative;
-   display: block;
    width: 100%;
-   min-height: 300px;
-   border-radius:8px;
-
+   display: flex;   
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;      
+   gap: 2rem;
 }
 
-.card-gallery {   
-   text-align: center;
-   border-radius: 8px;   
+.container-gallery .service-box {
+   position: relative;
+   width: 350px;
+   height: 280px;
+   background:#f2f2f5;   
+   border-radius: 20px;
+   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+   -webkit-box-shadow:0 8px 32px 0 rgba(0, 0, 0, 0.37);
+   overflow: hidden;   
+}
+
+.container-gallery .service-box .icon-gallery {
+   position: absolute;
+   top: 0;
+   left: 0;
    width: 100%;
-   max-width:300px;
-   max-height: 300px;   
-   box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-   -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-   -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   height: 100%;
+   background: var(--i);
+   transition: 0.5s;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 2;  
+   transition-delay: 0.25s; 
+}
+
+.container-gallery .service-box:hover .icon-gallery {
+   top: 30px;
+   left: calc(50% - 40px);
+   width: 80px;
+   height: 80px;
+   border-radius: 50%;
+   transition-delay: 0s;
+   
+}
+
+.container-gallery .service-box .icon-gallery ion-icon {
+   font-size: 5em;
+   color: var(--white);
+   transition: 0.5s;
+   transition-delay: 0.25s;   
+}
+
+.container-gallery .service-box:hover .icon-gallery ion-icon {
+   font-size:2em;
+   transition-delay: 0s;   
+}
+
+.container-gallery .service-box .content-card {
+   position: relative;
+   padding: 20px;
+   color: var(--black);
+   text-align: center;
+   margin-top: 100px;
+   z-index: 1;
+   transform: scale(0);
+   transition: 0.5s;
+   transition-delay: 0s;   
+}
+
+.container-gallery .service-box:hover .content-card {
+   transform: scale(1);
+   transition-delay: 0.25s;
+   
+}
+
+.container-gallery .service-box .content-card h2 {
+   margin-top: 1.5rem;
+   margin-bottom: 0.5rem;
+   font-weight: 700;
+}
+
+.container-gallery .service-box .content-card p {
+   font-weight: 300;
+   line-height: 1.5em;
 }
 
 .modal-header,
@@ -71,7 +130,6 @@
    font-size:3.2rem;
 }
 
-
 .modal a {
    color: var(--black);
    font-size: 2.8rem;
@@ -81,4 +139,3 @@
 .modal a:hover {
    color: var(--pink);   
 }
-
