~:ladybug: fixed responsivity issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,7 +20,11 @@
    }
 }
 
-@media (min-width: 426px) and (max-width:767px) {
+@media (min-width: 421px) and (max-width:767px) {
+  html {
+      font-size:48% !important;
+    }
+
    #home img,
    #about img {
       display: none;
@@ -31,14 +35,22 @@
    #parallax, #sumary {
       display: none;
    }
-
+   
+   .grid-services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr))!important;   
+    grid-gap: 3.2rem; 
+    justify-items: center;   
+    justify-content: center;
+    padding-top: 4.8rem;   
+ }
    .container-footer p {
       padding:0 !important;
       font-size: 1.2rem;
    }
 }
 
-@media (max-width: 425px) {   
+@media (max-width: 420px) {   
    html {
    font-size:40% !important;
    }
